# mycego-fullstack-yandex-disk

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  task_text.md
apps/authentication/: apps.py  forms.py  urls.py
apps/authentication/templates/authentication/: login.html  registration.html
apps/static/base/css/: out.css
apps/templates/base/: base.html
apps/yandex_disk_interface/: apps.py  urls.py  views.py
apps/yandex_disk_interface/static/yandex_disk_interface/js/: files_table.js
apps/yandex_disk_interface/templates/yandex_disk_interface/: files_table.html
util_tools/: scripts.py
yandex_disk/: asgi.py  example.env  settings.py  urls.py  wsgi.py
